<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>fr.techgp.nimbus</groupId>
	<artifactId>nimbus-java-api</artifactId>
	<version>1.18</version>
	<packaging>jar</packaging>
	<name>Nimbus Java API</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>21</maven.compiler.release>
	</properties>

	<dependencies>
		<!--
			Servlet API 5.0+ moved from "javax.servlet" to "jakarta.servlet"
			https://github.com/jakartaee/servlet
			https://central.sonatype.com/artifact/jakarta.servlet/jakarta.servlet-api
		-->
		<dependency>
			<groupId>jakarta.servlet</groupId>
			<artifactId>jakarta.servlet-api</artifactId>
			<version>5.0.0</version>
		</dependency>

		<!--
			https://www.eclipse.org/jetty/
			https://central.sonatype.com/artifact/org.eclipse.jetty/jetty-server
			https://central.sonatype.com/artifact/org.eclipse.jetty.websocket/websocket-jetty-api
			https://central.sonatype.com/artifact/org.eclipse.jetty.websocket/websocket-jetty-server
		-->
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-server</artifactId>
			<version>11.0.25</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jetty.websocket</groupId>
			<artifactId>websocket-jetty-api</artifactId>
			<version>11.0.24</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jetty.websocket</groupId>
			<artifactId>websocket-jetty-server</artifactId>
			<version>11.0.25</version>
		</dependency>

		<!--
			https://freemarker.apache.org/
			https://central.sonatype.com/artifact/org.freemarker/freemarker
		-->
		<dependency>
			<groupId>org.freemarker</groupId>
			<artifactId>freemarker</artifactId>
			<version>2.3.34</version>
		</dependency>

		<!--
			https://github.com/google/gson
			https://central.sonatype.com/artifact/com.google.code.gson/gson
		-->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.13.1</version>
		</dependency>

		<!--
			http://www.slf4j.org/api/org/slf4j/impl/SimpleLogger.html
			https://central.sonatype.com/artifact/org.slf4j/slf4j-api
			https://central.sonatype.com/artifact/org.slf4j/slf4j-simple
		-->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>2.0.17</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>2.0.17</version>
		</dependency>

		<!--
			https://github.com/jwtk/jjwt#install-jdk-maven
			https://central.sonatype.com/artifact/io.jsonwebtoken/jjwt-api
			https://central.sonatype.com/artifact/io.jsonwebtoken/jjwt-impl
			https://central.sonatype.com/artifact/io.jsonwebtoken/jjwt-gson
		-->
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-api</artifactId>
			<version>0.12.6</version>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-impl</artifactId>
			<version>0.12.6</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-gson</artifactId>
			<version>0.12.6</version>
		</dependency>
	</dependencies>

	<build>
		<sourceDirectory>src/</sourceDirectory>
		<outputDirectory>bin/</outputDirectory>
		<resources>
			<resource>
				<directory>res</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<!-- mvn dependency:copy-dependencies -DincludeScope=runtime -DoutputDirectory=lib -->
					<execution>
						<id>get-jars</id>
						<phase>validate</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<includeScope>runtime</includeScope>
							<outputDirectory>lib</outputDirectory>
						</configuration>
					</execution>
					<!-- mvn dependency:tree -Dverbose=true -DoutputType=txt -DoutputFile=pom.tree.txt -->
					<execution>
						<id>generate-dep-tree</id>
						<phase>validate</phase>
						<goals>
							<goal>tree</goal>
						</goals>
						<configuration>
							<outputFile>pom.tree.txt</outputFile>
							<outputType>txt</outputType>
							<verbose>true</verbose>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
